--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #ff1c1c;
 }
 button:focus,
 button:focus-visible {
